--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-  "name": "absence-manager",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
-    "next": "13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+	"name": "absence-manager",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@blueprintjs/core": "^4.12.0",
+		"@next-auth/prisma-adapter": "^1.0.5",
+		"antd": "^5.0.0",
+		"eslint": "8.27.0",
+		"eslint-config-next": "13.0.3",
+		"next": "13.0.3",
+		"next-auth": "^4.16.4",
+		"pocketbase": "^0.8.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"styled-components": "^5.3.3"
+	},
+	"devDependencies": {
+		"@types/node": "18.11.9",
+		"@types/react": "18.0.25"
+	},
+	"resolutions": {
+		"styled-components": "^5"
+	}
 }
